move profil image to img folder

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Tobias Riemenschneider</title>
-  <link rel="shortcut icon" href="%PUBLIC_URL%/profil.jpg" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/src/img/profil.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
